--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -32,12 +32,12 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3.0.2
       - name: Setup GraalVM
-        uses: DeLaGuardo/setup-graalvm@5.0
+        uses: DeLaGuardo/setup-graalvm@v1
         with:
-          graalvm: 22.1.0
-          java: java17
-      - name: Setup native-image
-        run: gu install native-image
+          version: 22.1.0
+          java-version: 17
+          components: native-image
+          github-token: ${{ secrets.GITHUB_TOKEN }}
       - name: Setup Clojure
         uses: DeLaGuardo/setup-clojure@5.1
         with:
