--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,9 +17,35 @@ jobs:
           java-version: 17
           components: native-image
           github-token: ${{ secrets.GITHUB_TOKEN }}
+
+      # macOS & Linux
       - name: Setup Clojure
+        if: ${{ matrix.os != 'windows-latest' }}
         uses: DeLaGuardo/setup-clojure@5.1
         with:
           cli: 1.11.1.1113
       - name: Build binary
+        if: ${{ matrix.os != 'windows-latest' }}
         run: clojure -T:build native-image
+
+      # Windows man...
+      - name: Install scoop
+        if: ${{ matrix.os == 'windows-latest' }}
+        uses: MinoruSekine/setup-scoop@v1
+      - name: Install MS build tools
+        if: ${{ matrix.os == 'windows-latest' }}
+        shell: powershell
+        run: |
+          choco install -y visualstudio2022-workload-vctools
+      - name: Setup Clojure
+        if: ${{ matrix.os == 'windows-latest' }}
+        shell: powershell
+        run: |
+          scoop bucket add scoop-clojure https://github.com/littleli/scoop-clojure
+          scoop install clojure
+      - name: Build binary
+        if: ${{ matrix.os == 'windows-latest' }}
+        shell: cmd
+        run: |
+          call "C:\Program Files (x86)\Microsoft Visual Studio\2022\BuildTools\VC\Auxiliary\Build\vcvars64.bat"
+          cmd-clojure -T:build native-image
