--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -65,6 +65,10 @@ jobs:
         if: ${{ matrix.os == 'windows-latest' }}
         shell: powershell
         run: |
+          # workaround a scoop bug: https://github.com/ScoopInstaller/Scoop/issues/4917
+          scoop bucket rm main
+          scoop bucket add main
+          
           scoop bucket add scoop-clojure https://github.com/littleli/scoop-clojure
           scoop install clojure
       - name: Build binary
