--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,40 +26,12 @@ jobs:
           cli: 1.11.1.1113
 
       # Windows man...
-#      - name: Install scoop (Windows)
-#        if: ${{ matrix.os == 'windows-latest' }}
-#        shell: powershell
-#        run: |
-#          iwr get.scoop.sh -outfile 'install.ps1'
-#          .\install.ps1 -RunAsAdmin
-#          Join-Path (Resolve-Path ~).Path "scoop\shims" >> $Env:GITHUB_PATH
-#      - name: Install MS build tools (Windows)
-#        if: ${{ matrix.os == 'windows-latest' }}
-#        shell: powershell
-#        run: |
-#          choco install -y visualstudio2022-workload-vctools
-#      - name: Setup Clojure (Windows)
-#        if: ${{ matrix.os == 'windows-latest' }}
-#        shell: powershell
-#        run: |
-#          # workaround a scoop bug: https://github.com/ScoopInstaller/Scoop/issues/4917
-#          scoop bucket rm main
-#          scoop bucket add main
-#
-#          scoop bucket add scoop-clojure https://github.com/littleli/scoop-clojure
-#          scoop install clojure
       - name: Setup Clojure (Windows)
         if: ${{ matrix.os == 'windows-latest' }}
         run: |
           PowerShell -Command "iwr -useb https://raw.githubusercontent.com/borkdude/deps.clj/master/install.ps1 | iex"
           Rename-Item $HOME\deps.clj\deps.exe clojure.exe
           echo "$HOME\deps.clj" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
-#      - name: Build binary (Windows)
-#        if: ${{ matrix.os == 'windows-latest' }}
-#        shell: cmd
-#        run: |
-#          call "C:\Program Files (x86)\Microsoft Visual Studio\2022\BuildTools\VC\Auxiliary\Build\vcvars64.bat"
-#          cmd-clojure -T:build native-image
 
-      - name: Build binary (macOS & Linux)
+      - name: Build binary
         run: clojure -T:build native-image
